[gd_scene load_steps=2 format=3 uid="uid://c8k3n9x7mp2rt"]

[ext_resource type="Script" path="res://scripts/boarding/escape_cutscene.gd" id="1_escape"]

[node name="EscapeCutscene" type="CanvasLayer"]
layer = 100
script = ExtResource("1_escape")

[node name="RushContainer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EscapingFlash" type="ColorRect" parent="RushContainer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 1, 0.5, 0)
mouse_filter = 2

[node name="EscapingLabel" type="Label" parent="RushContainer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 72
text = "ESCAPING!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UndockingContainer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UndockingContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 1)

[node name="AirlockPanel" type="Panel" parent="UndockingContainer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="AirlockFrame" type="ColorRect" parent="UndockingContainer/AirlockPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.3, 1)

[node name="AirlockDoor" type="ColorRect" parent="UndockingContainer/AirlockPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 2
color = Color(0.4, 0.4, 0.45, 1)

[node name="ClampLeft" type="ColorRect" parent="UndockingContainer"]
unique_name_in_owner = true
offset_left = 200.0
offset_top = 300.0
offset_right = 250.0
offset_bottom = 350.0
color = Color(0.6, 0.6, 0.65, 1)

[node name="ClampRight" type="ColorRect" parent="UndockingContainer"]
unique_name_in_owner = true
offset_left = 850.0
offset_top = 300.0
offset_right = 900.0
offset_bottom = 350.0
color = Color(0.6, 0.6, 0.65, 1)

[node name="UndockingStatus" type="Label" parent="UndockingContainer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "UNDOCKING..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="GetawayContainer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpaceBackground" type="ColorRect" parent="GetawayContainer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 1)

[node name="Stars" type="Control" parent="GetawayContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Star1" type="ColorRect" parent="GetawayContainer/Stars"]
offset_left = 100.0
offset_top = 100.0
offset_right = 104.0
offset_bottom = 104.0
color = Color(1, 1, 1, 0.8)

[node name="Star2" type="ColorRect" parent="GetawayContainer/Stars"]
offset_left = 300.0
offset_top = 200.0
offset_right = 303.0
offset_bottom = 203.0
color = Color(1, 1, 0.8, 0.6)

[node name="Star3" type="ColorRect" parent="GetawayContainer/Stars"]
offset_left = 600.0
offset_top = 150.0
offset_right = 605.0
offset_bottom = 155.0
color = Color(0.8, 1, 1, 0.7)

[node name="EnemyShip" type="ColorRect" parent="GetawayContainer"]
unique_name_in_owner = true
offset_left = 300.0
offset_top = 300.0
offset_right = 380.0
offset_bottom = 340.0
color = Color(0.5, 0.3, 0.3, 1)

[node name="PlayerShip" type="ColorRect" parent="GetawayContainer"]
unique_name_in_owner = true
offset_left = 500.0
offset_top = 300.0
offset_right = 560.0
offset_bottom = 330.0
color = Color(0.3, 0.5, 0.8, 1)

[node name="ExplosionParticles" type="GPUParticles2D" parent="GetawayContainer"]
unique_name_in_owner = true
position = Vector2(340, 320)
emitting = false
amount = 20
lifetime = 1.0
one_shot = true

[node name="LootSummaryContainer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LootSummaryContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 0.95)

[node name="LootSummaryPanel" type="Panel" parent="LootSummaryContainer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="LootSummaryContainer/LootSummaryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LootTitle" type="Label" parent="LootSummaryContainer/LootSummaryPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 48
text = "ESCAPE SUCCESSFUL"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="LootSummaryContainer/LootSummaryPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ItemsLabel" type="Label" parent="LootSummaryContainer/LootSummaryPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Items Collected:"
horizontal_alignment = 1

[node name="LootItemsList" type="VBoxContainer" parent="LootSummaryContainer/LootSummaryPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Spacer2" type="Control" parent="LootSummaryContainer/LootSummaryPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TotalValueLabel" type="Label" parent="LootSummaryContainer/LootSummaryPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "TOTAL VALUE: $0"
horizontal_alignment = 1

[node name="BonusLabel" type="Label" parent="LootSummaryContainer/LootSummaryPanel/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Bonus Message"
horizontal_alignment = 1
